--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "hamburger-react": "^2.5.0",
+    "mongodb": "^4.5.0",
     "next": "12.1.5",
+    "next-auth": "^4.3.2",
     "react": "18.0.0",
     "react-dom": "18.0.0"
   },
