--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "next": "12.1.5",
     "next-auth": "^4.3.2",
     "react": "18.0.0",
-    "react-dom": "18.0.0"
+    "react-dom": "18.0.0",
+    "react-toastify": "^8.2.0"
   },
   "devDependencies": {
     "eslint": "8.13.0",
