--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "hamburger-react": "^2.5.0",
     "mongodb": "^4.5.0",
     "next": "12.1.5",
     "next-auth": "^4.3.2",
     "react": "18.0.0",
     "react-dom": "18.0.0",
-    "react-toastify": "^8.2.0"
+    "react-icons": "^4.3.1",
+    "react-toastify": "^8.2.0",
+    "uuidv4": "^6.2.13"
   },
   "devDependencies": {
     "eslint": "8.13.0",
