--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^0.27.1",
     "bcryptjs": "^2.4.3",
     "mongodb": "^4.5.0",
     "next": "12.1.5",
