--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-icons": "^4.3.1",
+    "react-loading": "^2.0.3",
     "react-toastify": "^8.2.0",
     "uuidv4": "^6.2.13"
   },
