--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "uuidv4": "^6.2.13"
   },
   "devDependencies": {
+    "babel-eslint": "^10.1.0",
     "eslint": "8.13.0",
     "eslint-config-next": "12.1.5"
   }
